# alarm-app

./: package-lock.json  package.json
src/: alert.html  alert.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alarm.rs  lib.rs  main.rs  scheduler.rs  store.rs
