[package]
name = "alarm-app"
version = "0.1.0"
description = "Windows tray alarm app"
authors = ["you"]
edition = "2021"

[lib]
name = "alarm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rodio = "0.19"
tokio = { version = "1", features = ["time"] }
